--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,6 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Roboto";
+}
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 400;
+}
 
 @import "./song";
 @import "./player";
+@import "./library";
+@import "./nav";
