--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,5 +1,6 @@
 .player {
   min-height: 20vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,9 +10,14 @@
 .timeControl {
   width: 50%;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   input {
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem 0;
+    -webkit-appearance: none;
+    background: transparent;
+    cursor: pointer;
   }
   p {
     padding: 1rem;
@@ -27,4 +33,30 @@
   svg {
     cursor: pointer;
   }
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+.track {
+  background-color: aquamarine;
+  width: 100%;
+  height: 1rem;
+  position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.animateTrack {
+  background: rgb(149, 150, 150);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: -15px;
+  transform: translateX(0%);
+  pointer-events: none;
+  transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
