--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -1,7 +1,26 @@
-.song-container {
+.songContainer {
   min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  // add the circular thing here
+  img {
+    box-shadow: 2px 2px 50px gray;
+  }
+
+  h1,
+  h2,
+  h3 {
+    color: #1d1d1d;
+  }
+
+  h2 {
+    padding: 3rem 1rem 1rem 1rem;
+  }
+
+  h3 {
+    font-style: 3rem;
+  }
 }
