--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -13,6 +13,14 @@ h4 {
   font-weight: 400;
 }
 
+.App {
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.libraryActive {
+  margin-left: 15%;
+}
+
 @import "./song";
 @import "./player";
 @import "./library";
