--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -60,3 +60,21 @@ input[type="range"]:focus {
   pointer-events: none;
   transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+input[type="range"]::-moz-range-thumb {
+  -webkit-appearance: none;
+  background: transparent;
+  border: none;
+}
+
+@media screen and (max-width: 768px) {
+  .timeControl {
+    width: 90%;
+  }
+  .playControl {
+    width: 80%;
+  }
+}
